Bug 295464 - Image Pipe brush returns wrong size of the current brush
Summary: Image Pipe brush returns wrong size of the current brush
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-07 12:14 UTC by Dmitry Kazakov
Modified: 2012-03-10 07:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2012-03-07 12:14:20 UTC
This is a flaw of KisImagePipeBrush. To test this you need:

1) Select Filter Brush with Invert filter
2) Set the brush tip to: "C_Dirty Spot"
3) Paint

The result is weird:
https://bugs.kde.org/attachment.cgi?id=69298
Comment 1 Dmitry Kazakov 2012-03-08 09:30:26 UTC
Git commit 89af64e8e2565606e48a021ecb094f36ae008f61 by Dmitry Kazakov.
Committed on 08/03/2012 at 10:58.
Pushed by dkazakov into branch 'master'.

Fixed the mask size returned by KisImagePipeBrush

There are two fixes:
1) Now we switch the brush after painting the dab, not before. Otherwise
   the dab size is unknown.
2) Mask size is returned using the current brush values.

M  +23   -15   krita/plugins/paintops/libbrush/kis_brush.cpp
M  +6    -5    krita/plugins/paintops/libbrush/kis_brush.h
M  +50   -25   krita/plugins/paintops/libbrush/kis_imagepipe_brush.cpp
M  +10   -4    krita/plugins/paintops/libbrush/kis_imagepipe_brush.h
M  +6    -0    krita/plugins/paintops/libbrush/tests/CMakeLists.txt
A  +-    --    krita/plugins/paintops/libbrush/tests/data/C_Dirty_Spot.gih
A  +150  -0    krita/plugins/paintops/libbrush/tests/kis_imagepipe_brush_test.cpp     [License: GPL (v2+)]
A  +38   -0    krita/plugins/paintops/libbrush/tests/kis_imagepipe_brush_test.h     [License: GPL (v2+)]

http://commits.kde.org/calligra/89af64e8e2565606e48a021ecb094f36ae008f61
Comment 2 Dmitry Kazakov 2012-03-10 07:52:23 UTC
Git commit 4903b0ae28b99075addca72df4fc105b44839679 by Dmitry Kazakov.
Committed on 08/03/2012 at 10:58.
Pushed by dkazakov into branch 'calligra/2.4'.

Fixed the mask size returned by KisImagePipeBrush

There are two fixes:
1) Now we switch the brush after painting the dab, not before. Otherwise
   the dab size is unknown.
2) Mask size is returned using the current brush values.

M  +23   -15   krita/plugins/paintops/libbrush/kis_brush.cpp
M  +6    -5    krita/plugins/paintops/libbrush/kis_brush.h
M  +50   -25   krita/plugins/paintops/libbrush/kis_imagepipe_brush.cpp
M  +10   -4    krita/plugins/paintops/libbrush/kis_imagepipe_brush.h
M  +6    -0    krita/plugins/paintops/libbrush/tests/CMakeLists.txt
A  +-    --    krita/plugins/paintops/libbrush/tests/data/C_Dirty_Spot.gih
A  +150  -0    krita/plugins/paintops/libbrush/tests/kis_imagepipe_brush_test.cpp     [License: GPL (v2+)]
A  +38   -0    krita/plugins/paintops/libbrush/tests/kis_imagepipe_brush_test.h     [License: GPL (v2+)]

http://commits.kde.org/calligra/4903b0ae28b99075addca72df4fc105b44839679