Fixed the mask size returned by KisImagePipeBrush

There are two fixes:
1) Now we switch the brush after painting the dab, not before. Otherwise
   the dab size is unknown.
2) Mask size is returned using the current brush values.

BUG:295464