krita/plugins/paintops/libbrush/kis_brush.cpp
@@ -400,8 +400,7 @@ void KisBrush::generateMaskAndApplyMaskOrCreateDab(KisFixedPaintDeviceSP dst,
 
     KisQImagemaskSP outputMask = createMask(scale, subPixelX, subPixelY);
 
-    if (angle != 0)
-    {
+    if (angle != 0) {
         outputMask->rotation(angle);
     }
 
@@ -409,14 +408,27 @@ void KisBrush::generateMaskAndApplyMaskOrCreateDab(KisFixedPaintDeviceSP dst,
     qint32 maskHeight = outputMask->height();
 
     if (coloringInformation || dst->data() == 0 || dst->bounds().isEmpty()) {
-        // new bounds. we don't care if there is some extra memory occcupied.
+        // Lazy initialization
         dst->setRect(QRect(0, 0, maskWidth, maskHeight));
         dst->initialize();
     }
 
+    {
+        QSize dabSize = dst->bounds().size();
+        if (dabSize.width() != maskWidth || dabSize.height() != maskHeight) {
+            qWarning() << "WARNING: KisBrush::generateMaskAndApplyMaskOrCreateDab";
+            qWarning() << "         the sizes of the mask and the supplied dab are not"
+                       << "equal. We shall workaround it now, but please report a bug.";
+            qWarning() << "        " << ppVar(maskWidth) << ppVar(maskHeight);
+            qWarning() << "        " << ppVar(dabSize);
+
+            dst->setRect(QRect(0, 0, maskWidth, maskHeight));
+            dst->initialize();
+        }
+    }
+
     Q_ASSERT(dst->bounds().size().width() >= maskWidth && dst->bounds().size().height() >= maskHeight);
 
-    quint8* dabPointer = dst->data();
     quint8* color = 0;
 
     if (coloringInformation) {
@@ -425,33 +437,29 @@ void KisBrush::generateMaskAndApplyMaskOrCreateDab(KisFixedPaintDeviceSP dst,
         }
     }
 
-    int rowWidth = dst->bounds().width();
-
+    quint8* dabPointer = dst->data();
     quint8* rowPointer = dabPointer;
+    int rowWidth = dst->bounds().width();
 
     for (int y = 0; y < maskHeight; y++) {
         quint8* maskPointer = outputMask->scanline(y);
-        for (int x = 0; x < maskWidth; x++) {
-            if (coloringInformation) {
+        if (coloringInformation) {
+            for (int x = 0; x < maskWidth; x++) {
                 if (color) {
                     memcpy(dabPointer, color, pixelSize);
                 } else {
                     memcpy(dabPointer, coloringInformation->color(), pixelSize);
                     coloringInformation->nextColumn();
                 }
+                dabPointer += pixelSize;
             }
-
-            dabPointer += pixelSize;
         }
         cs->applyAlphaU8Mask(rowPointer, maskPointer, maskWidth);
-        maskPointer += maskWidth;
-        rowPointer += maskWidth * pixelSize;
+        rowPointer += rowWidth * pixelSize;
+        dabPointer = rowPointer;
 
         if (!color && coloringInformation) {
             coloringInformation->nextRow();
-        }
-        if (maskWidth < rowWidth) {
-            dabPointer += (pixelSize * (rowWidth - maskWidth));
         }
     }
 }
