krita/plugins/paintops/libbrush/kis_brush.h
@@ -152,7 +152,7 @@ public:
      * @param spacing a spacing of 1.0 means that strokes will be separated from one time the size
      *                of the brush.
      */
-    void setSpacing(double spacing);
+    virtual void setSpacing(double spacing);
 
     /**
      * @return the spacing between two strokes for this brush
@@ -172,18 +172,18 @@ public:
     /**
      * @return the width of the mask for the given scale and angle
      */
-    qint32 maskWidth(double scale, double angle) const;
+    virtual qint32 maskWidth(double scale, double angle) const;
 
     /**
      * @return the height of the mask for the given scale and angle
      */
-    qint32 maskHeight(double scale, double angle) const;
-    
+    virtual qint32 maskHeight(double scale, double angle) const;
+
     /**
      * @return the angle of the mask adding the given angle
      */
     double maskAngle(double angle=0) const;
-    
+
     /**
      * @return the index of the brush
      *         if the brush consists of multiple images
@@ -315,6 +315,7 @@ protected:
     void resetBoundary();
 
 private:
+    friend class KisImagePipeBrushTest;
 
     KisQImagemaskSP createMask(double scale, double subPixelX, double subPixelY) const;
 
